# WaveGate

./: Cargo.toml  README.md
WaveGate/: Cargo.toml  build.rs  tauri.conf.json
WaveGate/capabilities/: default.json
WaveGate/icons/: icon.icns
WaveGate/src/: builder.rs  client.rs  commands.rs  crypto.rs  handler.rs  listener.rs  logging.rs  main.rs  protocol.rs  proxy.rs  settings.rs  websocket.rs
client/: Cargo.toml
client/src/: ad.rs  chat.rs  clipboard.rs  commands.rs  config.rs  credentials.rs  dns.rs  dnscache.rs  dxgi.rs  filemanager.rs  h264_encoder.rs  kerberos.rs  lateral.rs  local_security.rs  main.rs  media.rs  processmanager.rs  proxy.rs  registry.rs  remotedesktop.rs  remotedesktop_h264.rs  services.rs  shell.rs  startup.rs  startupmanager.rs  taskscheduler.rs  tcpconnections.rs  token.rs  uac.rs  vmcheck.rs  websocket.rs  wmi.rs
shared/: Cargo.toml
shared/src/: lib.rs
ui/: app.js  index.html  styles.css
