[package]
name = "WaveGate"
version = "0.1.0"
edition = "2021"

[dependencies]
wavegate-shared = { path = "../shared" }
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-winrt-notification = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
webpki-roots = "0.26"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
thiserror = "1"
parking_lot = "0.12"
directories = "5"
base64 = "0.22"
sha1 = "0.10"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
chacha20poly1305 = "0.10"
fastrand = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
