[package]
name = "wavegate-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "waveclient"
path = "src/main.rs"
[profile.release]
strip = true          # Strip symbols from binary
lto = true            # Link Time Optimization
codegen-units = 1     # Single codegen unit for better optimization
opt-level = "z"       # Optimize for size
panic = "abort"       # Abort on panic (removes unwinding code)
[dependencies]
wavegate-shared = { path = "../shared" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time", "process"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
webpki-roots = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"
hostname = "0.4"
whoami = "1"
sysinfo = "0.32"
local-ip-address = "0.6"
ureq = { version = "2", features = ["json"] }
fs4 = "0.12"
once_cell = "1"
parking_lot = "0.12"
regex-lite = "0.1"
nokhwa = { version = "0.10", features = ["input-msmf"] }
cpal = "0.15"
image = { version = "0.25", default-features = false }
mozjpeg = "0.10"
jpeg-encoder = "0.6"
rayon = "1.10"
base64 = "0.22"
sha1 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
uuid = { version = "1", features = ["v4"] }

wmi = "0.14"
ldap3 = { version = "0.11", features = ["gssapi"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Shutdown",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Services",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    # DXGI and Direct3D for screen capture
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    # Media Foundation for H.264 hardware encoding
    "Win32_Media_MediaFoundation",
    "Win32_System_Com_StructuredStorage",
    # Active Directory and Kerberos
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security_Authentication_Identity",
    "Win32_Networking_ActiveDirectory",
    "Win32_Security_Credentials",
] }
winreg = "0.55"
time = { version = "0.3", features = ["formatting", "parsing", "local-offset"] }
